--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
-    "react-random-reveal": "^1.0.1", 
+    "react-random-reveal": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-text-transition": "^1.1.2",
     "styled-components": "^5.2.1",
+    "styled-normalize": "^8.0.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
