--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "nanoid": "^3.1.18",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-embed-gist": "^1.0.11",
     "react-icons": "^3.11.0",
     "react-random-reveal": "^1.0.1",
     "react-router-dom": "^5.2.0",
