--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "framer-motion": "^2.9.4",
-    "nanoid": "^3.1.18",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-embed-gist": "^1.0.11",
     "react-icons": "^3.11.0",
-    "react-random-reveal": "^1.0.1",
+    "react-jsx-parser": "^1.28.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-text-transition": "^1.1.2",
